

apply plugin: 'java'

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

ext {
  serversDir = "$rootDir/servers"
  if (TeamCityDir != null && TeamCityDir.length() != 0) {
  	teamCityDir = TeamCityDir
  } else {
	teamCityDir = "$serversDir/TeamCity-${teamCityVersion}"
  }
}

dependencies {
    implementation project(':powershell-common')
    implementation project(':powershell-agent')
    implementation project(':powershell-server')

	testImplementation 'org.assertj:assertj-core:2.2.0'
    testImplementation "org.jetbrains.teamcity:tests-support:$teamCityVersion"
    testImplementation "org.jetbrains.teamcity.internal:integration-test:$teamCityVersion"
}

test {
    useTestNG()
    if (JavaVersion.current().isJava9Compatible()) {
      jvmArgs += [
              "-Dnet.bytebuddy.experimental=true",
              "-XX:+IgnoreUnrecognizedVMOptions",
              "--add-opens=java.base/java.lang=ALL-UNNAMED",
              "--add-opens=java.base/java.io=ALL-UNNAMED",
              "--add-opens=java.base/java.util=ALL-UNNAMED",
              "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
              "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
              "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
              "--add-opens=java.base/sun.security.util=ALL-UNNAMED",
      ]
    }
}